// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Site admin dashboard widget recent sessions (5 sessions) Basic render test 1`] = `
<div
  className="dashboard-list-widget recent-sessions"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      Recent Sessions
    </div>
  </div>
  <div
    className="items-container"
  >
    <div
      className="items"
    >
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user1
            </div>
            <div
              className="duration"
            >
              Ongoing
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="mobile-icon"
          >
            <div
              className="top"
            />
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user2
            </div>
            <div
              className="duration"
            >
              5m 0s
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="app-icon"
          >
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user3
            </div>
            <div
              className="duration"
            >
              Ongoing
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="mobile-icon"
          >
            <div
              className="top"
            />
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user4
            </div>
            <div
              className="duration"
            >
              5m 0s
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="app-icon"
          >
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user5
            </div>
            <div
              className="duration"
            >
              Ongoing
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="mobile-icon"
          >
            <div
              className="top"
            />
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Site admin dashboard widget recent sessions (10 sessions) Basic render test 1`] = `
<div
  className="dashboard-list-widget recent-sessions"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      Recent Sessions
    </div>
  </div>
  <div
    className="items-container"
  >
    <div
      className="items"
    >
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user1
            </div>
            <div
              className="duration"
            >
              Ongoing
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="mobile-icon"
          >
            <div
              className="top"
            />
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user2
            </div>
            <div
              className="duration"
            >
              5m 0s
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="app-icon"
          >
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user3
            </div>
            <div
              className="duration"
            >
              Ongoing
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="mobile-icon"
          >
            <div
              className="top"
            />
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user4
            </div>
            <div
              className="duration"
            >
              5m 0s
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="app-icon"
          >
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user5
            </div>
            <div
              className="duration"
            >
              Ongoing
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="mobile-icon"
          >
            <div
              className="top"
            />
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
      <div
        className="item"
      >
        <img
          className="avatar avatar avatar-color-6 item-image"
          src="unresolved-user-avatar.png"
        />
        <div
          className="info"
        >
          <div
            className="main-info"
          >
            <div
              className="name"
            >
              user6
            </div>
            <div
              className="duration"
            >
              5m 0s
            </div>
          </div>
          <div
            className="start-time"
          >
            3 hours ago
          </div>
        </div>
        <div
          className="value"
        >
          <div
            className="app-icon"
          >
            <div
              className="screen"
            />
            <div
              className="base"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Site admin dashboard widget recent sessions (no sessions) Basic render test 1`] = `
<div
  className="dashboard-list-widget recent-sessions"
>
  <div
    className="header"
  >
    <div
      className="title"
    >
      Recent Sessions
    </div>
  </div>
  <div
    className="no-items"
  >
    No sessions found
  </div>
</div>
`;
